--- a/EventTracker/WebContent/eventtracker.css
+++ b/EventTracker/WebContent/eventtracker.css
@@ -1,4 +1,4 @@
-#Quizzes
+table
 {
 	margin-left: auto;
     margin-right: auto;
@@ -6,23 +6,11 @@
     width: 1000 px;
     text-align: center;
 }
-
-#Quiz
+form
 {
 	margin-left: auto;
     margin-right: auto;
-	font-size:	40px;
-    width: 1500 px;
+	font-size:	10px;
+    width: 1000 px;
     text-align: center;
-}
-#list
-{
-	font-size:50%;
-	color : blue;
-}
-
-#answer
-{
-	font-size:50%;
-	color : red;
 }
